@@ -75,6 +75,10 @@ N: Roland Hostettler
 E: r.hostettler@gmx.ch
 D: Developer
 
+N: Claudio Leonel
+E: cls@elaxys.com.br
+D: Developer
+
 N: Ladislav Michl
 E: ladis@linux-mips.org
 D: Maintainer
