@@ -1,0 +1,13 @@
+config XORG_APP_XAUTH
+	bool
+	depends on XORG_APP
+	select XORG_LIB_XAU
+	select XORG_LIB_XEXT
+	select XORG_LIB_XMU
+	select XORG_LIB_X11
+	select XORG_LIB_XDMCP
+	prompt "xorg xauth"
+	help
+	  The xauth program is used to edit and display the authorization
+	  information used in connecting to the X server.
+
