@@ -1,3 +1,7 @@
+2007-12-31 Robert Schwebel <r.schwebel@pengutronix.de>
+
+	* xauth: added patch by Claudio Leonel
+
 2007-12-29 Robert Schwebel <r.schwebel@pengutronix.de>
 
 	* net-snmp: refactored menu entries to use positive logic
